feat: 完成Qwen3-8B医疗模型SFT微调和对比评估
- 使用HuatuoGPT数据集（10万样本）对Qwen3-8B进行SFT微调
- 训练配置：LoRA(rank=16), 2 epochs, 有效batch size=32
- 训练结果：Loss从2.3065降至1.6161，训练时长3小时59分钟
- 创建模型对比评估脚本，对比微调前后Qwen3-8B与ziya-13b-med
- 对比结果：微调后生成时间提升59%，回答简洁性提升76%
- 添加完整训练报告文档（TRAINING_REPORT.md）
- 优化.gitignore，排除训练缓存、输出目录和大数据文件

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,28 @@ merge_*.py.log
 data/finetune/downloaded/*.jsonl
 data/finetune/downloaded/*.jsonl
 data/finetune/downloaded/*.txt
+
+# ===================== 训练输出/缓存（新增） =====================
+# 训练缓存
+cache/
+**/cache/
+qwen3_finetune/cache/
+
+# 模型输出目录
+outputs-*/
+**/outputs-*/
+qwen3_finetune/outputs-*/
+qwen3_finetune/outputs-qwen3-sft-huatuo/
+qwen3_finetune/outputs-qwen3-pretrain/
+
+# 数据集文件（处理后的）
+data/finetune/huatuo_sft/
+**/huatuo_sft/
+
+# 大数据文件（JSONL格式，超过100MB）
+data/finetune/huatuo_sft_conversations.jsonl
+**/*_conversations.jsonl
+
+# 评估结果
+comparison_results/
+**/comparison_results/
